<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dawn Note</string>
<<<<<<< HEAD
=======
    <
    <
    <
    <
    <
    <
    < HEAD
>>>>>>> 1b2ee64a457d19afd98f2dd0b3f759c0cd0f7b60
    <string name="Dawn">Dawn</string>
    <string name="Note">Note</string>
    <string name="DawnNote">DAWN NOTE</string>
    <string name="Statistics">확률 및 통계</string>
    <string name="CLanguage">C 언어</string>
    <string name="DataStructure">자료구조</string>
    <string name="copyright">Copyright 2022.List.All rights reserved.</string>
<<<<<<< HEAD
=======
    =======
    >>>>>>> ac90f2c4bbe025bc4f89118beb4b281a9a9d7fa9
>>>>>>> 1b2ee64a457d19afd98f2dd0b3f759c0cd0f7b60
</resources>