<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main"
        android:background="@drawable/noteback">

    <TextView
            android:text="@string/DawnNote"
            android:fontFamily="@font/javatext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView1"
            android:textSize="40sp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.01999998" android:textColor="#FFFFFF"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.481"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
    <TextView
            android:text="@string/Statistics"
            android:fontFamily="@font/jejugothic"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name1"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
    />
    <TextView
            android:text="@string/CLanguage"
            android:fontFamily="@font/jejugothic"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name2"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="@+id/imageView4"/>
    <TextView
            android:text="@string/DataStructure"
            android:fontFamily="@font/jejugothic"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/name3"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/imageView5" app:layout_constraintEnd_toEndOf="@+id/imageView5"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="49dp"
            app:srcCompat="@drawable/moon"
            android:id="@+id/imageView"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintVertical_bias="0.01999998"/>
    <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp" app:srcCompat="@drawable/detective" android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintVertical_bias="0.01999998"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/folder"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" android:layout_marginTop="60dp"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/folder" android:id="@+id/imageView4"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintVertical_bias="0.25" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/folder" android:id="@+id/imageView5"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
            android:layout_marginTop="60dp"/>
    <LinearLayout
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/white"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.111">
        <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/pink"
                android:id="@+id/button6"

        />
    </LinearLayout>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/smallfolder" android:id="@+id/imageView6"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.35" app:layout_constraintVertical_bias="0.18"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pinkplus_resize"
            android:id="@+id/imageButton2"
            android:background="@drawable/round"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.932" app:layout_constraintVertical_bias="0.93"/>
    <TextView
            android:text=".../ 중간고사"
            android:fontFamily="@font/jejugothic" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textColorLink="#FFFFFF"
            android:textColor="#FFFFFF" app:layout_constraintVertical_bias="0.18" android:textSize="16sp"/>
    <TextView
            android:text="Note"
            android:fontFamily="@font/javatext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textColor="#FFFFFF" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintVertical_bias="0.110000014" android:textSize="24sp"
    />
    <TextView
            android:text="Tag"
            android:fontFamily="@font/javatext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textColor="#FFFFFF" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0.110000014" android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>